objects/amc__Persona__c.object
<CustomObject>
    <description>The Persona Object is a child to the Program Object and captures the details of each type of person that will be impacted by Requirements and Users Stories related to the Program.</description>
    <fields>
        <fullName>amc__Persona_Goals__c</fullName>
        <inlineHelpText>A description of the Goals this Persona is trying to achieve</inlineHelpText>
        <label>Persona Goals</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Persona_Overview__c</fullName>
        <inlineHelpText>A detailed overview of the Persona</inlineHelpText>
        <label>Persona Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Program this Persona relates to</inlineHelpText>
        <label>Program</label>
        <referenceTo>amc__Program__c</referenceTo>
        <relationshipLabel>Personas</relationshipLabel>
        <relationshipName>Personas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Persona</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Persona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>